<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="3dp">
    <LinearLayout
        android:id="@+id/ll_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/tv_fecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:hint="@string/fecha"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4">
            <TextView
                android:id="@+id/tv_desciption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripcion"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_categoria"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/categorias"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_desciption"
                app:layout_constraintBottom_toTopOf="@id/tv_cuenta"/>
            <TextView
                android:id="@+id/tv_cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/cuentas"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_categoria" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_monto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:hint="@string/monto"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>